--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
     <script>
          $(".slide-wrap").owlCarousel({
                         loop: true,
-                        // margin: 10,
+                        margin: 30,
                         nav: true,
                         autoplay: true,
                         autoplayTimeout: 3520,
