--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a class="hide" href="#highlights">Highlights</a>
             <a class="hide" href="#sponsors">Sponsors</a>
             <a class="hide" href="#contact">Contact Us</a>
-            <a class="login hide" href="#">Log In</a>
+            <a class="login hide" href="#comingsoon">Log In</a>
             <!-- <button class="full" onclick="openNav()"><i class="fal fa-bars"></i></button> -->
             <div class="logo"></div>
 
@@ -47,7 +47,7 @@
             <li><a class="b-link" href="#highlights">Highlights</a></li>
             <li><a class="b-link" href="#sponsors">Sponsors</a></li>
             <li><a class="b-link" href="#contact">Contact Us</a></li>
-            <li><a class="b-link" href="#">Log In</a></li>
+            <li><a class="b-link" href="#comingsoon">Log In</a></li>
         </div>
         <!-- Burger-Icon -->
         <div class="b-container">
@@ -152,7 +152,7 @@
                             </div>
                             <div class="row2">
                                     <div class="col1">
-                                            <p class="num">20 Lac+</p>
+                                            <p class="num">2 Lac+</p>
                                             <p class="name">Prize Pool</p>
                                     </div>
                                     <div class="col2">
@@ -214,6 +214,84 @@
                  </div>
             </div>
         </section>
+        <!-- section 8 -->
+    <section class="section8" id="form">
+        <div class="container-box">
+            <div class="heading">
+                <h3>Become a Sponsor</h3>
+            </div>
+            <form>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="name">Name <span>*</span></label>
+                        <input type="text" class="form-control" id="name" placeholder="Name">
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="number">Whatsapp Number <span>*</span></label>
+                        <input type="number" class="form-control" id="number" placeholder="Number">
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="company">Company <span>*</span></label>
+                        <input type="text" class="form-control" id="company" placeholder="Current Company">
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="designation">Your Designation <span>*</span></label>
+                        <input type="text" class="form-control" id="designation" placeholder="Designation">
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="email">Email <span>*</span></label>
+                        <input type="text" class="form-control" id="email" placeholder="Email">
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="profile">Linkedin Profile<span>*</span></label>
+                        <input type="text" class="form-control" id="profile" placeholder="Linkedin Profile">
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="otherPortfolio">Other Portfolio Link</label>
+                        <textarea class="form-control" rows="5" id="otherPortfolio" placeholder="Other Portfolio Link"></textarea>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="comment">What is it that you are expecting from us?</label>
+                        <textarea class="form-control" rows="5" id="comment" placeholder="max 300 words"></textarea>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="gridCheck">
+                        <label class="form-check-label" for="gridCheck">
+                            Keep me updated
+                        </label>
+                    </div>
+                </div>
+                <button type="submit" class="btn">Submit</button>
+            </form>
+        </div>
+    </section>
+
+ <!-- section 7 -->
+ <section class="section7" id="comingsoon">
+    <div class="main">
+        <div class="heading">
+            <h3>Campus <span>Ambassador</span></h3>
+        </div>
+        <div class="circle-wrap">
+        <div class="circle">
+            <h1 class="glitch" data-glitch="ZEALICON">COMING SOON</h1>
+            <p>STAY TUNED!</p>
+            <a class="login" href="#form">NOTIFY ME</a>
+        </div>
+    </div>
+    </div>
+</section>
+
 
          <!-- section 4 -->
      <section class="section4" id="contact">
@@ -240,7 +318,7 @@
                                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3502.5450831368453!2d77.3582765147209!3d28.613421191697267!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce5992452d761%3A0xaaa44725147c1507!2sJSS%20Academy%20of%20Technical%20Education!5e0!3m2!1sen!2sin!4v1573230179534!5m2!1sen!2sin" width="300" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
                         </div>
                         <div class="visit">
-                            <div class="pay">Pay Us A Visit At :</div>
+                            <div class="pay">Pay us a visit at :</div>
                             <div class="location">JSS Academy of Technical Education <br> C-20/1, Sector-62, Noida 201301</div>
                         </div>
                     </div>
@@ -311,7 +389,7 @@
 
     $(".parent-box").owlCarousel({
                         loop: true,
-                        // margin: 10,
+                        margin: 10,
                         nav: true,
                         dots: true,
                         autoplay: true,
@@ -344,9 +422,9 @@
                         nav: true,
                         slideTransition: `linear`,
                         autoplay: true,
-                        autoplayTimeout: 1520,
+                        autoplayTimeout: 3520,
                         // autoplayHoverPause: true,
-                        smartSpeed: 1500,
+                        smartSpeed: 8000,
                         animateIn: 'linear',
                         animateOut: 'linear',
                         responsive: {
@@ -369,8 +447,8 @@
                         slideTransition: `linear`,
                         autoplay: true,
                         // autoplayTimeout: 1000,
-                        autoplayTimeout: 1520,
-                        smartSpeed: 1500,
+                        autoplayTimeout: 3520,
+                        smartSpeed: 8000,
                         rtl:true,
                         animateIn: 'linear',
                         animateOut: 'linear',
@@ -412,7 +490,6 @@
 
             });
     </script>
-    
 </body>
 
 </html>
