--- a/index.html
+++ b/index.html
@@ -242,44 +242,28 @@
             <form>
                 <div class="form-row">
                     <div class="form-group col-md-6">
-                        <label for="name">Name <span>*</span></label>
-                        <input type="text" class="form-control" id="name" placeholder="Name">
+                        <label for="name">Sponsor Name <span>*</span></label>
+                        <input type="text" class="form-control" id="name" placeholder="Sponsor Name">
                     </div>
                     <div class="form-group col-md-6">
-                        <label for="number">Whatsapp Number <span>*</span></label>
+                        <label for="company">Contact person <span>*</span></label>
+                        <input type="text" class="form-control" id="company" placeholder="Contact person">
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="number">Contact Number <span>*</span></label>
                         <input type="number" class="form-control" id="number" placeholder="Number">
                     </div>
-                </div>
-                <div class="form-row">
-                    <div class="form-group col-md-6">
-                        <label for="company">Company <span>*</span></label>
-                        <input type="text" class="form-control" id="company" placeholder="Current Company">
-                    </div>
-                    <div class="form-group col-md-6">
-                        <label for="designation">Your Designation <span>*</span></label>
-                        <input type="text" class="form-control" id="designation" placeholder="Designation">
-                    </div>
-                </div>
-                <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="email">Email <span>*</span></label>
                         <input type="text" class="form-control" id="email" placeholder="Email">
                     </div>
-                    <div class="form-group col-md-6">
-                        <label for="profile">Linkedin Profile<span>*</span></label>
-                        <input type="text" class="form-control" id="profile" placeholder="Linkedin Profile">
-                    </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
-                        <label for="otherPortfolio">Other Portfolio Link</label>
-                        <textarea class="form-control" rows="5" id="otherPortfolio" placeholder="Other Portfolio Link"></textarea>
-                    </div>
-                </div>
-                <div class="form-row">
-                    <div class="form-group col-md-6">
-                        <label for="comment">What is it that you are expecting from us?</label>
-                        <textarea class="form-control" rows="5" id="comment" placeholder="max 300 words"></textarea>
+                        <label for="comment">Address <span>*</span></label>
+                        <textarea class="form-control" rows="5" id="comment" placeholder="Address"></textarea>
                     </div>
                 </div>
                 <div class="form-group">
@@ -305,7 +289,7 @@
         <div class="circle">
             <h1 class="glitch" data-glitch="ZEALICON">COMING SOON</h1>
             <p>STAY TUNED!</p>
-            <a class="login" href="#form">NOTIFY ME</a>
+            <!-- <a class="login" href="#form">NOTIFY ME</a> -->
         </div>
     </div>
     </div>
@@ -555,9 +539,6 @@
             });
             
             </script>
-
-
-
 
 </body>
 
