new changes and contact persons added

--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
                 <h3>About <span>Zealicon</span></h3>
                 <p>JSSATE, Noida following its legacy of doing things extraordinary and setting benchmarks, put up a splendid fest, thereby adding another leaf to its success story. The students and staff put in a joint effort, working tirelessly since December, to hold a College Fest. The four day fest, which is a Techno-Cultural extravaganza, had a plethora of exciting events with a huge number of participants. The production work gave a new edge to the ambience of the College with a creative design that showcased aesthetic skills of the finest artists. The success of Fest can be easily evaluated by the fact that it witnessed a turnout of more than 6,000, and every evening had a perfect ending with various events and Battle of Bands to conclude the Fest.</p>
             </div>
+            <div class="iframe-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/zRidlFAR00A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
         </div>
     </section>
 
@@ -270,14 +273,14 @@
                         <textarea class="form-control" rows="5" id="comment" placeholder="Address" name="address" required></textarea>
                     </div>
                 </div>
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" id="gridCheck">
                         <label class="form-check-label" for="gridCheck">
                             Keep me updated
                         </label>
                     </div>
-                </div>
+                </div> -->
                 <button type="submit" class="btn">Submit</button>
                 <div style="display:none" class="thankyou_message">
                     <!-- You can customize the thankyou message by editing the code below -->
@@ -315,12 +318,14 @@
                 <div class="high">
                     <div class="slide">
                         <div class="content">
-                                <p class="contact"> <span>Contact No. :</span> +910000000000</p>
+                                <p class="contact" style="margin-bottom: 0; padding-bottom: 0; line-height: 0.1;"> <span>Contact Person :</span></p> <br>
+                                             <p class="person"> <span>Devanshu Monga :</span> 9899863709 <br> (Festival Secretary)<br> </p>
+                                                <p class="person"><span>Kushagra Bharadwaj :</span> 9411224086 <br>(Festival Secretary)</p>   
                                 <p class="contact"> <span>Email :</span> zealicon@jssaten.ac.in</p>
                                 <p class="contact"> <span>Social Links :</span></p>
                                 <div class="social">
-                                    <a href="https://www.facebook.com/nibblecomputersociety/" target="_blank"> <img src="/img/fb.png" alt="."></a>
-                                    <a href="https://www.instagram.com/hackncs/?hl=en" target="_blank"><img src="/img/insta.png" alt="."></a>
+                                    <a href="https://www.facebook.com/zealicon/" target="_blank"> <img src="/img/fb.png" alt="."></a>
+                                    <a href="https://www.instagram.com/zealicon/" target="_blank"><img src="/img/insta.png" alt="."></a>
                                     <a href="https://www.youtube.com/watch?v=zRidlFAR00A" target="_blank"><img src="/img/youtube.png" alt="."></a>
                                 </div>
                     </div>
@@ -350,7 +355,7 @@
               </small>
             </div>
           </div>
-          <div class="gotop"><a href="#top"><i class="far fa-chevron-up"></i></a></div>
+          <a href="#" class="go-top"><i class="far fa-chevron-up"></i></a>
         </div>
     </footer>
     
@@ -360,6 +365,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   
+    <!-- go top  -->
+        <script src="/js/gotop.js"></script>
     
     <!-- menu phone  -->
     <script src="/js/fullMenu.js"></script>
