--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
                                 </div>
                                 <div class="col2">
                                         <div style="display: flex;" >                                
-                                                <p class="num c-section4">25</p>
-                                                <p class="num">00+</p> 
+                                                <p class="num c-section4">15</p>
+                                                <p class="num">0+</p> 
                                             </div> 
                                         <p class="name">Events</p>
                                 </div>
@@ -171,8 +171,8 @@
                                     <div class="col1">
                                         
                                             <div style="display: flex;" >                                
-                                                    <p class="num c-section4">200</p>
-                                                    <p class="num">00+</p> 
+                                                    <p class="num c-section4">200 </p>
+                                                    <p class="num">K+</p> 
                                             </div>
                                             <p class="name">Prize Pool</p>
                                     </div>
