--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
         gtag('config', 'UA-152934024-1');
         </script>
 
-
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -258,7 +257,7 @@
                 <h3>Become a Sponsor</h3>
             </div>
             <!-- https://script.google.com/macros/s/AKfycbxMxBOZDda9i1Pwx-9tBUz2tNoTBQnVYtziD1rt/exec -->
-            <form class="gform" method="POST" data-email="rajatverma5885045@gmail.com" action="https://script.google.com/macros/s/AKfycbxMxBOZDda9i1Pwx-9tBUz2tNoTBQnVYtziD1rt/exec">
+            <form class="gform" method="POST" data-email="rajatverma5885045@gmail.com" action="https://script.google.com/macros/s/AKfycbwkUHR_L2R9aPGlpZ5XllBZEINB3QXfr8ZZSykggIfoomVckNI/exec">
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="name">Sponsor Name <span>*</span></label>
@@ -272,7 +271,7 @@
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="number">Contact Number <span>*</span></label>
-                        <input type="tel" class="form-control" id="number" placeholder="Number" name="contact-number" maxlength="10" required>
+                        <input type="phone" class="form-control" id="number" placeholder="Number" name="contact-number" maxlength="10" required>
                     </div>
                     <div class="form-group col-md-6">
                         <label for="email">Email <span>*</span></label>
@@ -296,7 +295,7 @@
                 <button type="submit" class="btn">Submit</button>
                 <div style="display:none" class="thankyou_message">
                     <!-- You can customize the thankyou message by editing the code below -->
-                    <h2 style="color: white;"><b>Thanks</b> for contacting us! We will get back to you soon!
+                    <h2 class="msg" style="color: white; font-size: 32px; margin-top:30px;"><b>Thanks</b> for contacting us.<br> We will get back to you soon!
                     </h2>
                    </div>
             </form>
