Previous Events button added

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <a class="hide" href="#about">About</a>
             <a class="hide" href="#highlights">Highlights</a>
             <a class="hide" href="#sponsors">Sponsors</a>
+            <a class="hide" target="_blank" href="http://zealicon2019.surge.sh/">Previous Events</a>
             <a class="hide" href="#contact">Contact Us</a>
             <a class="login hide" href="#comingsoon">Log In</a>
             <!-- <button class="full" onclick="openNav()"><i class="fal fa-bars"></i></button> -->
@@ -65,6 +66,7 @@
             <li><a class="b-link" href="#about">About</a></li>
             <li><a class="b-link" href="#highlights">Highlights</a></li>
             <li><a class="b-link" href="#sponsors">Sponsors</a></li>
+            <li><a class="b-link" target="_blank" href="http://zealicon2019.surge.sh/">Previous Events</a></li>
             <li><a class="b-link" href="#contact">Contact Us</a></li>
             <li><a class="b-link" href="#comingsoon">Log In</a></li>
         </div>
