--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
-        gtag('config', 'UA-152934024-1');
+        gtag('config', 'UA-152934024-1'); 
         </script>
 
     <!-- Required meta tags -->
@@ -87,6 +87,7 @@
     <div class="main-slider">
         <div class="dark">
             <h1 class="glitch" data-glitch="ZEALICON">ZEALICON</h1>
+            <h1 class="glitch dates" data-glitch="24th - 27th March">24th - 27th March</h1>
             <p class="twenty-right">20</p>
             <p class="twenty-left">20</p>
             
